<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Power Clock</string>
    <string name="add_alarm">Add alarm</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="enable_alarm">Enable alarm</string>
    <string name="disable_alarm">Disable alarm</string>
    <string name="delete_alarm_confirm">This alarm will be deleted.</string>
    <string name="show_clock">Show clock</string>
    <string name="hide_clock">Hide clock</string>
    <string name="label">Label</string>
    <string name="default_label">Alarm</string>
    <string name="set_alarm">Set alarm</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alert">Ringtone</string>
    <string name="time">Time</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_alert_silenced">Alarm silenced after <xliff:g id="minutes">%d</xliff:g> minutes</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>
    <string-array name="alarm_set">
        <item>This alarm is set for less than 1 minute from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>
    <string name="day">"1 day"</string>
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>
    <string name="hour">1 hour</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    <string name="every_day">every day</string>
    <string name="never">Never</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">Select a clock to display.</string>
    <string name="analog_gadget">Analog clock</string>
    <string name="settings">Settings</string>
    <string name="alarm_in_silent_mode_title">Alarm in silent mode</string>
    <string name="skip_next_repeating_alarm_title">Skip next repeating alarm</string>
    <string name="alarm_in_silent_mode_summary">Play alarm even when the phone is in silent mode</string>
    <string name="snooze_duration_title">Snooze duration</string>
    <string-array name="snooze_duration_entries">
      <item>5 minutes</item>
      <item>10 minutes</item>
      <item>15 minutes</item>
      <item>20 minutes</item>
      <item>25 minutes</item>
      <item>30 minutes</item>
    </string-array>
    <string-array name="snooze_duration_values">
      <item>5</item>
      <item>10</item>
      <item>15</item>
      <item>20</item>
      <item>25</item>
      <item>30</item>
    </string-array>
    <string-array name="icon_size_setting_values">
      <item>Normal</item>
      <item>Large</item>
      <item>Very Large</item>
    </string-array>
    <string-array name="icon_size_setting_entries">
      <item>Normal</item>
      <item>Large</item>
      <item>Very Large</item>
    </string-array>
    <string name="icon_size_setting_title">Set icons size</string>
    <string-array name="font_color_setting_entries">
      <item>Red</item>
      <item>Green</item>
      <item>Blue</item>
    </string-array>
    <string-array name="font_color_setting_values">
      <item>#ffff0000</item>
      <item>#ff00ff00</item>
      <item>#ff0000ff</item>
    </string-array>
    <string name="done">Done</string>
    <string name="font_scale_title">Set font size</string>
    <string name="show_next_alarm">Show next alarm?</string>
    <string name="show_next_alarm_smart_title">Smarter show next alarm</string>
    <string name="show_next_alarm_smart_summary">Only show next alarm if less than 18 hours to go</string>
    <string name="revert">Revert</string>
    <string name="clock_font_scale">Clock font scale</string>
    <string name="font_color_title">Select clock font color</string>
    <string name="show_ampm">Show AM/PM indicator</string>
    <string name="show_24_hour_clock_title">Show 24 hour clock</string>
    <string name="day_brightness_title">Adjust screen daytime brightness</string>
    <string name="power_nag_title">Show reminders when power is not connected</string>
    <string name="power_nag_summary">PowerClock is meant to be used only wen power is connected!</string>
    <string name="use_gentle_wake_summary">Slowly increase the alarm volume</string>
    <string name="use_gentle_wake_title">Use Gentle Wake</string>
    <string name="gentle_wake_duration_title">Gentle Wake duration</string>
    <string name="gentle_wake_duration_summary">How long should the alarm ramp to full volume</string>
    <string-array name="gentle_wake_duration_setting_entries">
      <item>5</item>
      <item>10</item>
      <item>15</item>
      <item>20</item>
      <item>25</item>
      <item>30</item>
      <item>45</item>
      <item>60</item>
      <item>120</item>
    </string-array>
    <string-array name="gentle_wake_duration_setting_values">
      <item>5</item>
      <item>10</item>
      <item>15</item>
      <item>20</item>
      <item>25</item>
      <item>30</item>
      <item>45</item>
      <item>60</item>
      <item>120</item>
    </string-array>
    <string name="auto_start_usb_title">Auto-start when USB is connected</string>
    <string name="night_brightness_title">Adjust screen nighttime brightness</string>
    <string name="alarm_volume_title">Alarm volume</string>
    <string name="alarm_volume_summary">Set the volume of alarms</string>
    <string name="silent_alarm_summary">Silent</string>
    <string name="alarm_notify_text">Select to snooze or dismiss this alarm.</string>
    <string name="alarm_notify_snooze_label"><xliff:g id="label">%s</xliff:g> (snoozed)</string>
    <string name="alarm_notify_snooze_text">Alarm set for <xliff:g id="time">%s</xliff:g>. Select to cancel.</string>
    <string name="volume_button_setting_title">Side button behavior</string>
    <string name="keep_screen_on_setting_title">Keep screen on</string>
    <string name="quick_adjust_brightness_setting_title">Adjust screen brightness from the main screen</string>
    <string name="quick_adjust_brightness_setting_summary">If disabled, brightness can only be adjusted with the day/night preset shortcuts</string>
    <string name="swipe_left_right_brightness">Swipe left and right to adjust brightness. Press back arrow to save.</string>
    <string name="swipe_left_right_font_size">Swipe left and right to adjust font size. Press back arrow to save.</string>
    <string name="volume_button_setting_summary">Set the desired behavior of the side buttons when pressed during an alarm</string>
    <string name="default_ringtone_setting_title">Set default ringtone</string>
    <string-array name="volume_button_setting_entries">
      <item>None</item>
      <item>Snooze</item>
      <item>Dismiss</item>
    </string-array>
    <string-array name="volume_button_setting_values">
      <item>0</item>
      <item>1</item>
      <item>2</item>
    </string-array>
    <string name="menu_settings">Settings Menu</string>
    <string name="UPDATE_CLOCK_DISPLAY_RECEIVER">UPDATE_CLOCK_DISPLAY_RECEIVER</string>
</resources>