<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com"
    android:title="@string/settings">

    <PreferenceCategory
        android:title="Alarm Settings" >
        
	    <CheckBoxPreference
	        android:key="alarm_in_silent_mode"
	        android:title="@string/alarm_in_silent_mode_title"
	        android:summary="@string/alarm_in_silent_mode_summary" />
	
	    <VolumePreference
	        android:title="@string/alarm_volume_title"
	        android:summary="@string/alarm_volume_summary"
	        android:dialogTitle="@string/alarm_volume_title"
	        android:persistent="false"
	        android:streamType="alarm" />
	
        <CheckBoxPreference
            android:key="use_gentle_wake"
            android:title="@string/use_gentle_wake_title"
            android:defaultValue="false" />
        
        <ListPreference
            android:key="gentle_wake_duration"
            android:title="@string/gentle_wake_duration_title"
            android:entries="@array/gentle_wake_duration_setting_entries"
            android:entryValues="@array/gentle_wake_duration_setting_values"
            android:summary="@string/gentle_wake_duration_summary"
            android:defaultValue="20" />
    
        <ListPreference
	        android:key="volume_button_setting"
	        android:title="@string/volume_button_setting_title"
	        android:entries="@array/volume_button_setting_entries"
	        android:entryValues="@array/volume_button_setting_values"
	        android:summary="@string/volume_button_setting_summary"
	        android:defaultValue="2" />
	
	    <ListPreference
	        android:key="snooze_duration"
	        android:title="@string/snooze_duration_title"
	        android:entries="@array/snooze_duration_entries"
	        android:entryValues="@array/snooze_duration_values"
	        android:defaultValue="10"
	        android:dialogTitle="@string/snooze_duration_title" />

        <com.skipmorrow.powerclock.AlarmPreference
            android:key="default_ringtone"
            android:title="@string/default_ringtone_setting_title"
            android:ringtoneType="alarm"
            android:showDefault="false"
            android:persistent="false"
            android:showSilent="true" />
    
	</PreferenceCategory>

    <PreferenceCategory
        android:title="Display Settings" >
    
	    <ListPreference
	        android:key="font"
	        android:title="@string/font_color_title"
	        android:entries="@array/font_color_setting_entries"
	        android:entryValues="@array/font_color_setting_values"
	        android:defaultValue="#ffff0000" />
	
	    <Preference
	        android:key="font_scale_setting"
	        android:title="@string/font_scale_title" >
	        <intent
	            android:action="android.intent.action.VIEW"
	            android:targetPackage="com.skipmorrow.powerclock"
	            android:targetClass="com.skipmorrow.powerclock.SetFontScaleActivity">
	        </intent>
	    </Preference>
	
        <ListPreference
            android:key="icon_size"
            android:title="@string/icon_size_setting_title"
            android:entries="@array/icon_size_setting_entries"
            android:entryValues="@array/icon_size_setting_values"
            android:defaultValue="normal" />
    
	    <Preference
	        android:title="@string/day_brightness_title" >
	        <intent
	            android:action="android.intent.action.VIEW"
	            android:targetPackage="com.skipmorrow.powerclock"
	            android:targetClass="com.skipmorrow.powerclock.SetBrightnessActivity">
	            <extra android:name="daynight" android:value="day" />
	        </intent>
	    </Preference>
	
	    <Preference
	        android:title="@string/night_brightness_title" >
	        <intent
	            android:action="android.intent.action.VIEW"
	            android:targetPackage="com.skipmorrow.powerclock"
	            android:targetClass="com.skipmorrow.powerclock.SetBrightnessActivity">
	            <extra android:name="daynight" android:value="night" />
	        </intent>
	    </Preference>
	
	    <CheckBoxPreference
	        android:key="show_next_alarm"
	        android:title="@string/show_next_alarm"
	        android:defaultValue="true" />
	    
        <CheckBoxPreference
            android:key="show_next_alarm_only_if_less_than_18_hours"
            android:title="@string/show_next_alarm_smart_title"
            android:summary="@string/show_next_alarm_smart_summary"
            android:defaultValue="false" />
        
	    <CheckBoxPreference
	        android:key="show_24hr_clock"
	        android:title="@string/show_24_hour_clock_title"
	        android:defaultValue="false" />
	    
	    <CheckBoxPreference
	        android:key="show_ampm"
	        android:title="@string/show_ampm"
	        android:defaultValue="true" />
	    
	    <CheckBoxPreference
	        android:key="nag_when_power_not_connected"
	        android:title="@string/power_nag_title"
	        android:defaultValue="true" 
	        android:summary="@string/power_nag_summary" 
	        />
        
        <CheckBoxPreference
            android:key="enable_quick_brightness_adjustments"
            android:title="@string/quick_adjust_brightness_setting_title"
            android:summary="@string/quick_adjust_brightness_setting_summary"
            android:defaultValue="true" />
        
	    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="Other Settings" >
            
        <CheckBoxPreference
            android:key="auto_start_when_usb_plugged_in"
            android:title="@string/auto_start_usb_title"
            android:defaultValue="false" />
        
        <CheckBoxPreference
            android:key="keep_screen_on"
            android:title="@string/keep_screen_on_setting_title"
            android:defaultValue="true" />
        
        <Preference
            android:title="Help" >
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.skipmorrow.powerclock"
                android:targetClass="com.skipmorrow.powerclock.HelpActivity">
            </intent>
        </Preference>
    
     </PreferenceCategory>
    
</PreferenceScreen>
